--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jorge Henrique">
+    <meta name="description" content="mini site de redirecionamento">
+    <link rel="icon" type="image/x-icon" href="./assets/img/coracao.gif">
+
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Mini Site de Murito T.G.</title>
@@ -44,5 +48,9 @@
         </div>
 
     </main>
+
+    <footer class="footer">
+        <p><a rel="nofollow" target="_blank" href="https://jorgehenrrique.github.io/miniportfolio/">Feito com <span class="heart">&hearts;</span> Jorge</a></p>
+    </footer>
 </body>
 </html>
