--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/rolagem.css">
     <title>Mini Site de Murito T.G.</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
         <div class="sobre">
             <h3>Sobre mim</h3>
             <p>Olá! meu nome é Murilo, seja bem-vindo(a)!</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum asperiores ipsa veritatis fuga sed porro blanditiis. Porro, laudantium cumque, officia cum velit inventore amet, aliquid voluptate maxime vel laborum quo?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum asperiores ipsa veritatis fuga sed porro blanditiis. Porro, laudantium cumque, officia cum velit inventore amet, aliquid voluptate maxime vel laborum quo? lorem</p>
         </div>
 
         <hr>
