--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jorge Henrique">
     <meta name="description" content="mini site de redirecionamento">
-    <link rel="icon" type="image/x-icon" href="./assets/img/coracao.gif">
+    <link rel="icon" type="image/x-icon" href="./assets/icones/coracao.gif">
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
