sobre mim reajustado, retirado linha de link, e adicionado icones de link

--- a/index.html
+++ b/index.html
@@ -32,18 +32,15 @@
         <hr>
 
         <div class="contatos">
-            <h3>Minhas redes</h3>
+            <!-- <h3>Minhas redes</h3> -->
             
             <div class="minhas-redes">
                 <ul class="redes-sociais">
-                    <!-- <li>
-                        <a href="#" target="_blank" class="linkdin">LinkdIn</a>
-                    </li> -->
                     <li>
-                        <a href="https://www.instagram.com/murilot.g" target="_blank" class="insta">Instagram</a>
+                        <a href="https://www.instagram.com/murilot.g" target="_blank" class="insta"><img src="./assets/icones/instagram.png" alt="instagram" width="50px"></a>
                     </li>
                     <li>
-                        <a href="https://api.whatsapp.com/send?phone=5564999045555" target="_blank" class="whats">Whatsapp</a>
+                        <a href="https://api.whatsapp.com/send?phone=5564999045555" target="_blank" class="whats"><img src="./assets/icones/whatsapp.png" alt="whatsapp" width="50px"></a>
                     </li>
                 </ul>
             </div>
