reajuste de tamaho das fontes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/rolagem.css">
+    <link rel="stylesheet" href="assets/css/seletores.css">
+    
     <title>Mini Site de Murito T.G.</title>
 </head>
 <body>
