--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="sobre">
             <h3>Sobre mim</h3>
             <p>Olá! meu nome é Murilo, seja bem-vindo(a)!</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum asperiores ipsa veritatis fuga sed porro blanditiis. Porro, laudantium cumque, officia cum velit inventore amet, aliquid voluptate maxime vel laborum quo? lorem</p>
+            <p>Minhas redes sociais abaixo, para contato.</p>
         </div>
 
         <hr>
