--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="sobre">
             <h3>Sobre mim</h3>
             <p>Olá! meu nome é Murilo, seja bem-vindo(a)!</p>
-            <p>Minhas redes sociais abaixo, para contato.</p>
+            <p>Minhas redes sociais abaixo para contato.</p>
         </div>
 
         <hr>
